--- a/link.css
+++ b/link.css
@@ -1,4 +1,4 @@
-	h1{
+	/*h1{
 		color: red;
 		text-align: center;
 	}
@@ -25,4 +25,10 @@
 	}
 	ul{
 		list-style-type: square;
+	}
+	*/
+	.Babu_Align{
+		font-family: verdana;
+		text-align: center;
+		background-color: pink;
 	}
